--- a/css/styles.css
+++ b/css/styles.css
@@ -109,10 +109,10 @@ nav#mainmenu .menu  { display: none; }
 | Main
 -------------------------------------*/
 #main section {
-	min-height: 150px;
+	min-height: 250px;
 
 	overflow: hidden;
-	background-color: #E4E4E4;
+	background-color: #ffffff;
 
 	max-width: 100%;
 	overflow: hidden;
@@ -142,7 +142,7 @@ img { width: 100%; }
 
 #container img{}
 #main article img{margin-left:20px; margin-top: 20px;}
-#main #sect1 img{ width:50px; height: auto;background-color: white;margin-left: 370px; margin-top: -105px;}
+#main #sect1 img{ width:250px; height: auto;background-color: white;margin-left: 480px; margin-top: 10px;}
 
 
 img { max-width: 100%;
